syntax = "proto3";
package peers;
import "peer.proto";

// PeerSet is a set of Peers forming a consensus network
message PeerSet {
    repeated Peer Peers = 1;
    map<string, Peer> ByPubKey = 2;
    map<uint32, Peer> ById = 3;
    // cached values
    bytes hash_ = 4;
    string hex_ = 5;
    int64 superMajority_ = 6;
    int64 trustCount_ = 7;
}